fix: arrow not clickable in card component - applied z-index to pseudo-anchor-block mixin to bring the clickable state up a level from default - tested fix against card component and hero module

--- a/src/global/scss/tools/_general.scss
+++ b/src/global/scss/tools/_general.scss
@@ -142,5 +142,6 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: map-get($z-index, low);
   }
 }
